tests/snapshots/parse_failure__array_many.snap
---
source: tests/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
[1, 2, 3]
stdout --- 
[1, 2, 3]
stderr --- 
<empty>
