tests/snapshots/parse_failure__array_missing_value.snap
---
source: tests/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
[1, ]
stdout --- 
<empty>
stderr --- 
error: expected json value, found `]`
 --> stdin:1:5
  |
1 | [1, ]
  |   - ^
  |   |
  |   expected due to `,`
  |
help: consider removing the trailing comma
  |
1 - [1, ]
1 + [1 ]
  |
