tests/snapshots/parse_failure__array_single.snap
---
source: tests/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
[1]
stdout --- 
[1]
stderr --- 
<empty>
