tests/snapshots/parse_failure__array_subarrays.snap
---
source: tests/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
[["a"], [true, false]]
stdout --- 
[["a"], [true, false]]
stderr --- 
<empty>
