tests/snapshots/parse_failure__closed_curly.snap
---
source: tests/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
}
stdout --- 
<empty>
stderr --- 
error: expected json value, found `}`
 --> stdin:1:1
  |
1 | }
  | ^
  |
help: consider adding the missing open curly brace
  |
1 | {}
  | +
